<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="46.669983dip"
        >
       <TextView 
          android:background="@drawable/title_bg"
           android:gravity="center"
           android:layout_width="fill_parent"
           android:layout_height="fill_parent"
           android:text="易购"
           android:textSize="16sp"
           android:textStyle="bold"
           android:textColor="@color/white"
           />        
    </LinearLayout>
    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        >
        <com.yida.base.MyGallery
            android:id="@+id/banner_gallery"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:soundEffectsEnabled="false"
            android:keepScreenOn="true"
            android:background="#000"
            android:fadingEdgeLength="0.0dp"
             />
        <LinearLayout
            android:id="@+id/ll_bottomNavPoint"
            android:layout_width="wrap_content"
            android:layout_height="20dip"
            android:layout_gravity="bottom|right"
            android:background="#00000000"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp"                               
            >
         <LinearLayout
             android:id="@+id/ll_focus_indicator_container"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:gravity="bottom"              
             android:orientation="horizontal" />
        </LinearLayout>
     </FrameLayout>
     <!-- tab切换 -->
	 <LinearLayout     
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical" >	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"	       
	        android:orientation="vertical" 
	        android:background="@color/white"
	        >
	       <RadioGroup
                android:id="@+id/top_radio_button_group"
 	            android:layout_width="fill_parent"
	            android:layout_height="35dip"
	            android:layout_gravity="center"               
	            android:orientation="horizontal" >
	            
	            <RadioButton
	                android:id="@+id/tv_tab_activity"
	                android:text="@string/tab_1"
	                style="@style/index_tab_top"
	                android:checked="true"
	                android:drawableLeft="@drawable/fashion_icon_bg" 
	                />
	
	            <RadioButton
	                android:id="@+id/tv_tab_groups"
	                android:text="@string/tab_2"
	                style="@style/index_tab_top"
	                android:drawableLeft="@drawable/special_icon_bg" 
	                />
	
	            <RadioButton
	                android:id="@+id/tv_tab_friends"
					style="@style/index_tab_top"
	                android:text="@string/tab_3"
	                android:drawableLeft="@drawable/recommend_icon_bg" 
	                />
	
	            <RadioButton
	                android:id="@+id/tv_tab_chat"
					style="@style/index_tab_top"
	                android:text="@string/tab_4"
	                android:drawableLeft="@drawable/tuan_icon_bg" 
	                 />
	            <RadioButton
	                android:id="@+id/tv_tab_mei"
					style="@style/index_tab_top"
	                android:text="@string/tab_5"
	                android:drawableLeft="@drawable/mei_icon_bg" 
	                 />
	        </RadioGroup>
	
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_gravity="bottom"
	            android:orientation="vertical"
	           >
	            <ImageView
	                android:id="@+id/iv_bottom_line"
	                android:layout_width="40dip"
	                android:layout_height="2dip"	                
	                android:scaleType="matrix"
	                android:src="@color/pink" />
	        </LinearLayout>
	     <android.support.v4.view.ViewPager
	        android:id="@+id/vPager"
	        android:layout_width="wrap_content"
	        android:layout_height="0dip"
	        android:layout_weight="1.0"
	        android:layout_gravity="center"	        
	        android:background="#000000"
	        android:flipInterval="30"
	        android:persistentDrawingCache="animation" />
	    </LinearLayout>	    	
	</LinearLayout>
  <!-- 切换结束 -->
</LinearLayout>